# Pro-vision

./: .gitignore  __main__.py  app.py  clean_socioecon.py  crawler.py  crawler_new_attempt.py  demo_nx.py  pyproject.toml  readme.md  test.py  utility.py
Simulation/: Dist_from_com_areas_to_prov_centers.json  Pairs.csv  Pairs1.csv  Pairs10.csv  Pairs11.csv  Pairs3.csv  Pairs5.xlsx  Pairs6.txt  Pairs_coms.csv  Pairs_vf.csv  Times_from_com_areas_to_prov_centers.json  __main__.py  adjacency_graph_backup.py  app_sim.py  boundaries.py  mock_table.py  point_in_area.py  run_api_times.py  run_simulation.py  simulation.py  simulation_v1.py  simulation_v2.py  times_matrices.py  utils.py
dashboard_full/: app.py  utility.py
dashboard_full/data/: check_bounds.csv  check_boundsV2.csv
dashboard_full/raw_data/: CommCoords.csv
dashboard_full/scripts/: api_keys.sh  centract_data_clean.py  clean_isochrones.py  geo_api.py  pre_process.py
dashboard_quick/: app.py  final_geo_SEI.xlsx  prov_isoID.csv
data/: comm_bounds_coords.csv  fire_stations.csv
data/clean_prov/: prov_1.csv
data/clean_sei/: sei_1.csv  sei_4.csv
data/isochrones/: isochrone_SEQID.json  isochrone_addressISO.json  isochrone_withID.json
data/process_data/: df_meltV1.csv  provisions.csv
pro-env/: pyproject.toml
provision/: pyproject.toml
raw_data/: CommAreas.csv  Warming_Centers.csv  readme.md
raw_data/centract/: sei_centract.csv
raw_data/provisions/: Fire_Stations.csv  Neighborhood_Health_Clinics_-_Historical.csv
raw_data/socioecon/: Received needed care rate in Community areas.csv  Unemployment rate in Community areas.csv
scripts/: centract_data_clean.py  clean_fire.py  community_data_clean.py  data_wrangling.py  geo_api.py  geo_code.py  pre_process.py  prov_sdk.py
(+14 files in other folders)
