[tool.poetry]
name = "prov-env"
version = "0.1.1"
description = "Revised environment with all API dependencies installed (missing viz dependencies)"
authors = ["Setu Loomba"]
readme = "README.md"
packages = [{include = "prov_env"}]

[tool.poetry.dependencies]
python = "^3.8"
googlemaps = "^4.10.0"
DateTime = "^5.0"
traveltimepy = "^3.0.3"
geo_code = "^0.0.5"
pandas = "^1.5.3"
geopandas = "^0.12.2"
lxml = "^4.9.2"
selenium = "^4.8.2"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
